Added method for loading data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,7 @@ management.endpoints.web.base-path= /
 
 server.servlet.context-path=/retail-food-stores/
 
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 server.port = 8090
