--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,6 @@ server.servlet.context-path=/retail-food-stores/
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+spring.data.web.pageable.one-indexed-parameters=true
+
 server.port = 8090
