--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>1.6.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.harium</groupId>
+            <artifactId>kdtree</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
 </project>
